# sokol_cmake

./: .gitmodules  CMakeLists.txt  main.c  shaders.glsl.h
client/: CMakeLists.txt  main.c  renderer.h  shaders.glsl  shaders.glsl.h  ui.h
common/: common.h  math.h  math_mat4.h  math_quat.h  math_ray.h  math_scalar.h  math_vec2.h  math_vec3.h  math_vec4.h  msvc_pragma.h
formpack/: formpack.dd  gen.c
server/: CMakeLists.txt  main.c
